--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,13 @@
     "indentWidth": 2,
     "lineWidth": 100
   },
-  "assist": { "actions": { "source": { "organizeImports": "on" } } },
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
+  },
   "linter": {
     "enabled": true,
     "rules": {
@@ -33,6 +39,18 @@
           },
           "style": {
             "noImplicitBoolean": "off"
+          }
+        }
+      },
+      "assist": {
+        "actions": {
+          "source": {
+            "organizeImports": {
+              "level": "on",
+              "options": {
+                "groups": [":NODE:", "react", ":BLANK_LINE:", ["@manstack/**"], ["@/**", "./**"]]
+              }
+            }
           }
         }
       }
